--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
   <section id="contact">
     <h2>Contact Me</h2>
     <hr class="star-dark"/>
+		 <div class="text-center"><h1 class="fa fa-phone">+2347036900230</h1>
+	 </div>
     <div>
 <form name="sentMessage" id="contactForm" novalidate>
                         <div class="row control-group">
@@ -98,7 +100,7 @@
                         </div>
                     </form>
       <div>
-        <p>Want to get in touch with me? Want to know more about me or my experience, Wow want to work with me? <p>I'm open just fill in the form and we you are done. just feel free to inbox me anytime. </p></p>
+        <p>Want to get in touch with me? Want to know more about me or my experience, Wow want to work with me? <p>I'm open just fill in the form and you are done. just feel free to call or inbox me anytime. </p></p>
       </div>
     </div>
   </section>
